Closed Bug 1325001 Opened 7 years ago Closed 7 years ago

Firefox Assumes the "kind" of <track> tags

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: cyappleseed, Assigned: bechen)

Details

(Keywords: html5)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.87 Safari/537.36
Firefox for Android

Steps to reproduce:

In a .html file when making a <video> you would normally have the option to assign a <track> tag FIGURE 1. this would be for video indexing,subtitling and descriptions and this can typicaly be differentiated by setting the kind (kind="subtitling" for example). In this case FIGURE 1. the kind="chapters"  so they should be no subtitling. 

FIGURE 1.
<video controls poster="/images/sample.gif">
   <source src="sample.mp4" type="video/mp4">
   <source src="sample.ogv" type="video/ogv">
   <track kind="chapters" src="sampleChapters.vtt" srclang="en">
</video>


Actual results:

In this case FIGURE 1. the kind="chapters" so there should be no subtitling. Then when executing the html Firefox assumes  vtt to be all the "kinds" of the track tag. So subtitling is showing up as well as indexing and description. Even when there are two vtt files FIGURE 2. assigned the first one is taking priority for all the roles

FIGURE 2.
<video controls poster="/images/sample.gif">
   <source src="sample.mp4" type="video/mp4">
   <source src="sample.ogv" type="video/ogv">
   <track kind="chapters" src="sampleChapters.vtt" srclang="en">
   <track kind="subtitles" src="sampleSubtitles_en.vtt" srclang="en">
</video>


Expected results:

What should happen is the vtt should be limited to what the "kind" it is set to so in this case only indexing or chapters should be populating.
Keywords: html5
OS: Unspecified → All
Priority: -- → P2
Hardware: Unspecified → All
Priority: P2 → --
Product: Firefox → Core
Version: 1.0 Branch → unspecified
Component: Untriaged → Audio/Video: Playback
Assignee: nobody → bechen
Sorry we miss the bug for a while.

Do you mean that firefox shows the "chapters content" as subtitle?
That's a bug I found in our codebase.
Flags: needinfo?(cyappleseed)
I believe so "chapters content" or "Indexing".


Would Screenshots Help??
Flags: needinfo?(cyappleseed)
Comment on attachment 8869896 [details]
Bug 1325001 - TextTrackList::GetShowingCues should return cues whose kind is Subtitles or Captions.

https://reviewboard.mozilla.org/r/141442/#review145668
Attachment #8869896 - Flags: review?(giles) → review+
Pushed by rgiles@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bf614473c436
TextTrackList::GetShowingCues should return cues whose kind is Subtitles or Captions. r=rillian
https://hg.mozilla.org/mozilla-central/rev/bf614473c436
Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: