Bug 1325001 - TextTrackList::GetShowingCues should return cues whose kind is Subtitles or Captions. r=rillian

We should only render the Subtitles/Captions cue on the screen. In addition, rename the activeCues to showingCues.
Because the meaning of "active" and "showing" are different. Showing means we can see the cue on the screen, active means the current playback time touches the cue.

MozReview-Commit-ID: 1BfHhxFXBDP

--HG--
extra : rebase_source : 2c4d6b0b052758f1bb01a7794365bf75b556304c